.collect(Collectors.toList()) -> .toList()