@@ -1,13 +1,13 @@
 package com.slack.kaldb.metadata.dataset;
 
-import static com.google.common.base.Preconditions.checkArgument;
-
 import com.google.common.collect.ImmutableList;
 import com.slack.kaldb.metadata.core.KaldbMetadata;
+
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
+import static com.google.common.base.Preconditions.checkArgument;
 
 /**
  * Contains configurations for use in the pre-processor and query service - including rate limits,
@@ -119,7 +119,7 @@ public class DatasetMetadata extends KaldbMetadata {
         partitionConfig
             .stream()
             .sorted(Comparator.comparingLong(DatasetPartitionMetadata::getStartTimeEpochMs))
-            .collect(Collectors.toList());
+            .toList();
 
     for (int i = 0; i < sortedConfigsByStartTime.size(); i++) {
       if (i + 1 != sortedConfigsByStartTime.size()) {
