@@ -355,7 +355,7 @@ public class RecoveryChunkManagerTest {
     assertThat(fetchNonLiveSnapshot(snapshots).size()).isEqualTo(0);
     List<SearchMetadata> searchNodes = searchMetadataStore.listSync();
     assertThat(searchNodes).isEmpty();
-    assertThat(liveSnapshots.stream().map(s -> s.snapshotId).collect(Collectors.toList()))
+    assertThat(liveSnapshots.stream().map(s -> s.snapshotId).toList())
         .isEmpty();
     assertThat(snapshots.stream().filter(s -> s.endTimeEpochMs == MAX_FUTURE_TIME)).isEmpty();
   }
@@ -400,7 +400,7 @@ public class RecoveryChunkManagerTest {
     assertThat(fetchNonLiveSnapshot(snapshots).size()).isEqualTo(0);
     List<SearchMetadata> searchNodes = searchMetadataStore.listSync();
     assertThat(searchNodes).isEmpty();
-    assertThat(liveSnapshots.stream().map(s -> s.snapshotId).collect(Collectors.toList()))
+    assertThat(liveSnapshots.stream().map(s -> s.snapshotId).toList())
         .isEmpty();
     assertThat(snapshots.stream().filter(s -> s.endTimeEpochMs == MAX_FUTURE_TIME)).isEmpty();
 
