@@ -4,6 +4,7 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.slack.kaldb.logstore.LogMessage;
 import com.slack.kaldb.logstore.LogWireMessage;
 import com.slack.kaldb.util.JsonUtil;
+
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.time.Instant;
@@ -11,7 +12,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class MessageUtil {
@@ -133,21 +133,21 @@ public class MessageUtil {
     return IntStream.rangeClosed(low, high)
         .boxed()
         .map(MessageUtil::makeSerializedMessage)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public static List<String> makeSerializedBadMessages(int low, int high) {
     return IntStream.rangeClosed(low, high)
         .boxed()
         .map(MessageUtil::makeSerializedBadMessage)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public static List<LogMessage> makeMessages(int low, int high) {
     return IntStream.rangeClosed(low, high)
         .boxed()
         .map(MessageUtil::makeMessage)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public static List<LogMessage> makeMessagesWithTimeDifference(int low, int high) {
